--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.5",
     "morgan": "~1.9.0",
+    "nodemon": "^1.14.12",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5"
   }
